# playdate-chipmunk-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md  playdate-chipmunk-lib.code-workspace
Source/: box.lua  caption.lua  circle.lua  disc.lua  editor.lua  inspector.lua  main.lua  pdxinfo  segmentpreview.lua  settings.lua  staticsegment.lua  world.lua
chipdx/: luaglue.c  luaglue.h  main.c  pdcalloc.c  pdcalloc.h
chipmunk/: README.md
chipmunk/include/chipmunk/: chipmunk.h
chipmunk/src/: cpBody.c
